[gd_scene load_steps=3 format=3 uid="uid://cl7wej5k1tlc4"]

[ext_resource type="Script" path="res://UI/Pause/pause_menu.gd" id="1_bqthm"]
[ext_resource type="PackedScene" uid="uid://db6nsiuqoytme" path="res://UI/Settings/Settings.tscn" id="2_0mehi"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqthm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -491.0
offset_top = -224.0
offset_right = 509.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45098)

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -68.0
offset_right = 47.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Options"

[node name="Forfeit" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Forfeit Run"

[node name="Exit" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Quit Game"

[node name="Settings" parent="ColorRect" instance=ExtResource("2_0mehi")]
visible = false
layout_mode = 1
offset_left = 94.0
offset_top = 43.0
offset_right = -82.0
offset_bottom = 18.0

[connection signal="pressed" from="ColorRect/GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Forfeit" to="." method="_on_forfeit_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="backButton" from="ColorRect/Settings" to="." method="_on_settings_back_button"]
